--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Gatherer Server
+__pycache__/ 
+*.pem
+*.cert
+.venv/
+
 # User-specific files
 *.rsuser
 *.suo
